# open-grok

./: .gitignore  AGENTS.md  Cargo.toml  OPEN_GROK_VERSION  README.md  hawk.toml  install.sh
.opengrok/skills/develop-open-grok/: SKILL.md
crates/codegen/xai-grok-code-mode/: Cargo.toml  NOTICE  README.md
crates/codegen/xai-grok-code-mode-protocol/: Cargo.toml  README.md
crates/codegen/xai-grok-code-mode-protocol/src/: description.rs  lib.rs  runtime.rs  tool_name.rs
crates/codegen/xai-grok-code-mode/src/: lib.rs  service.rs  service_contract_tests.rs  service_tests.rs
crates/codegen/xai-grok-code-mode/src/cell_actor/: conversions.rs  tests.rs
crates/codegen/xai-grok-code-mode/src/runtime/: callbacks.rs  mod.rs  value.rs
crates/codegen/xai-grok-code-mode/src/session_runtime/: tests.rs
crates/codegen/xai-grok-code-mode/tests/: jit.rs
docs/: code-mode-port.md  codex-provider-port.md  provider-architecture.md
docs/agents/: README.md  acp.md  agent-runtime.md  code-mode.md  editing.md  hooks-plugins-skills.md  memory-and-goals.md  permissions-and-sandbox.md  providers.md  sessions.md  subagents.md  tools.md  tui-and-config.md
docs/releases/: v0.1.220-open-grok.1.md  v0.1.220-open-grok.13.md  v0.1.220-open-grok.15.md  v0.1.220-open-grok.17.md  v0.1.220-open-grok.18.md  v0.1.220-open-grok.22.md  v0.1.220-open-grok.24.md  v0.1.220-open-grok.25.md  v0.1.220-open-grok.26.md  v0.1.220-open-grok.27.md  v0.1.220-open-grok.3.md  v0.1.220-open-grok.30.md  v0.1.220-open-grok.5.md  v0.1.220-open-grok.6.md
scripts/: build-macos-release.sh  build-windows-release.ps1
(+514 files in other folders)
