[package]
name = "xai-grok-code-mode"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "Persistent embedded V8 runtime for Grok Build Code Mode."
publish = false

[lib]
doctest = false

[features]
sandbox = ["v8/v8_enable_sandbox"]

[dependencies]
deno_core_icudata = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
v8 = { workspace = true }
xai-grok-code-mode-protocol = { path = "../xai-grok-code-mode-protocol" }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
